--- a/envs/dev/terraform.auto.tfvars.example
+++ b/envs/dev/terraform.auto.tfvars.example
@@ -10,3 +10,8 @@ allowed_ssh_cidrs = [
 ]
 
 service_account_name = "dev-compute-sa"
+
+instance_name = "dev-vm"
+machine_type  = "e2-micro"
+zone          = "europe-west1-b"
+
