refactor: switch compute module to multi-instance using for_each

--- a/envs/dev/terraform.auto.tfvars.example
+++ b/envs/dev/terraform.auto.tfvars.example
@@ -11,7 +11,13 @@ allowed_ssh_cidrs = [
 
 service_account_name = "dev-compute-sa"
 
-instance_name = "dev-vm"
-machine_type  = "e2-micro"
-zone          = "europe-west1-b"
-
+instances = {
+  app-1 = {
+    machine_type = "e2-micro"
+    zone         = "europe-west1-b"
+  }
+  app-2 = {
+    machine_type = "e2-micro"
+    zone         = "europe-west1-b"
+  }
+}
